--- a/style.css
+++ b/style.css
@@ -12,6 +12,58 @@ body {
 
 }
 
+h1 {
+    font-family: 'Chango', cursive;
+    font-size: 3rem;
+    font-weight: bold;
+    max-width: 120rem;
+    color: white;
+    border-top: 2px solid white;
+    border-bottom: 2px solid white;
+    padding: 0.7rem;
+    text-align: center;
+    text-transform: uppercase;
+    background-color: #008000;
+}
+
+h2 {
+
+    font-family: 'Days One', sans-serif;
+    font-size: 2rem;
+    font-weight: 600;
+    max-width: 120rem;
+    color: white;
+    text-align: center;
+}
+
+h3 {
+    font-family: 'Days One', sans-serif;
+    font-size: 1.5rem;
+    padding-bottom: 20px;
+    font-weight: 100;
+    color: white;
+}
+
+p {
+    font-family: 'Vollkorn', serif;
+    max-width: 120rem;
+    font-size: 1.5rem;
+    color: white;
+    margin-left: 2rem;
+    padding-bottom: 2rem;
+}
+
+ul {
+    color: white;
+    font-family: 'Vollkorn', serif;
+    font-size: 1.5rem;
+}
+
+a {
+    font-family: 'Vollkorn', serif;
+    font-size: 1.5rem;
+}
+
 
 img {
     width: 100%;
@@ -49,46 +101,6 @@ a {
 }
 
 
-h1 {
-    font-size: 3rem;
-    font-weight: bold;
-    max-width: 120rem;
-    color: white;
-    border-top: 2px solid white;
-    border-bottom: 2px solid white;
-    padding: 0.7rem;
-    text-align: center;
-    font-family: ;
-    text-transform: uppercase;
-    background-color: #008000;
-}
-
-h2 {
-    font-size: 2rem;
-    font-weight: 600;
-    max-width: 120rem;
-    color: white;
-    text-align: center;
-    font-family: ;
-    text-decoration: underline;
-}
-
-h3 {
-    font-size: 1.5rem;
-    padding-bottom: 20px;
-    font-weight: 100;
-    color: white;
-
-}
-
-p {
-    max-width: 120rem;
-    font-size: 1.5rem;
-    color: white;
-    margin-left: 2rem;
-    padding-bottom: 2rem;
-}
-
 figure {
     margin: 0;
 }
@@ -108,11 +120,6 @@ section {
     border: 1px solid black;
     border-color: black;
     background-color: #191f26;
-}
-
-
-ul {
-    color: white;
 }
 
 
