--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ img {
     width: 100%;
     margin-top: 1rem;
     padding: 1rem;
-    max-height: 60rem;
+
     max-width: 60rem;
 
 }
@@ -133,6 +133,14 @@ ul {
     flex-grow: 1;
     flex-basis: 300px;
 }
+
+#udkast .col {
+    display: flex;
+    justify-content: center;
+    flex-grow: 1;
+    flex-basis: 300px;
+}
+
 
 
 #menuknap {
